--- a/src/SprykerFeature/Zed/Maintenance/Presentation/Index/index.twig
+++ b/src/SprykerFeature/Zed/Maintenance/Presentation/Index/index.twig
@@ -4,26 +4,16 @@
 
 {% block content %}
 
-    {% embed '@Gui/Partials/widget.twig' with { widget_title: 'Installed Packages' } %}
+    {% embed '@Gui/Partials/widget.twig' with { widget_title: 'Maintenance' } %}
 
         {% block widget_content %}
 
-            <table class="table table-striped table-bordered table-hover">
-                <tr>
-                    <td>{{ 'Name' | trans }}</td>
-                    <td>{{ 'License' | trans }}</td>
-                    <td>{{ 'Version' | trans }}</td>
-                    <td>{{ 'Type' | trans }}</td>
-                </tr>
-                {% for installedPackage in installedPackages.packages %}
-                    <tr>
-                        <td><a href="{{ installedPackage.url }}">{{ installedPackage.name }}</a></td>
-                        <td>{{ installedPackage.license|join(', ') }}</td>
-                        <td>{{ installedPackage.version }}</td>
-                        <td>{{ installedPackage.type }}</td>
-                    </tr>
-                {% endfor %}
-            </table>
+            <h3>Core</h3>
+            <ul>
+                <li>
+                    <a href="/maintenance/dependency">Bundle dependencies</a>
+                </li>
+            </ul>
 
         {% endblock %}
 
