Also link in and out.

--- a/src/SprykerFeature/Zed/Maintenance/Presentation/Dependency/incoming.twig
+++ b/src/SprykerFeature/Zed/Maintenance/Presentation/Dependency/incoming.twig
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="spy-layout sparse">
         <h3>{{ "Incoming dependencies of the" | trans }} {{ bundle }} {{ "bundle" | trans }}</h3>
-        <table class="spy-grid">
+        <table class="table table-striped spy-grid">
             <tr class="text-left">
                 <th>Dependency</th>
                 <th>Count</th>
