--- a/src/Spryker/Zed/Maintenance/Presentation/Dependency/index.twig
+++ b/src/Spryker/Zed/Maintenance/Presentation/Dependency/index.twig
@@ -2,10 +2,11 @@
 {% block content %}
     <div class="spy-layout sparse">
         <h3>{{ "Dependency graphs of all core bundles" | trans }}</h3>
+        <p><a href="/maintenance/dependency/simple">Simple Dependency Graph</a> | <a href="/maintenance/dependency/dependency-tree-graph">Detailed Dependency Graph</a> | <a href="/maintenance/dependency/adjacency-matrix">Adjacency Matrix</a></p>
         <ul>
             {% for bundle in bundles %}
                 <li>
-                    <a href="/maintenance/dependency/graph?bundle={{ bundle }}">{{ bundle }}</a> (<a href="/maintenance/dependency/incoming?bundle={{ bundle }}">in</a>/<a href="/maintenance/dependency/outgoing?bundle={{ bundle }}">out</a>)
+                    <a href="/maintenance/dependency/graph?bundle={{ bundle }}">{{ bundle }}</a> (<a href="/maintenance/dependency/incoming?bundle={{ bundle }}">in</a>/<a href="/maintenance/dependency/outgoing?bundle={{ bundle }}">out</a>/<a href="/maintenance/dependency/simple?bundle={{ bundle }}">simple</a>/<a href="/maintenance/dependency/dependency-tree-graph?bundle={{ bundle }}">detailed</a>/<a href="/maintenance/dependency/adjacency-matrix?bundle={{ bundle }}">adjacency</a>)
                 </li>
             {% endfor %}
         </ul>
