--- a/src/Spryker/Zed/Maintenance/Presentation/Dependency/index.twig
+++ b/src/Spryker/Zed/Maintenance/Presentation/Dependency/index.twig
@@ -5,7 +5,7 @@
     {% embed '@Gui/Partials/widget.twig' with { widget_title: 'Dependency graphs of all core bundles' } %}
         {% block widget_content %}
             <div class="spy-layout sparse">
-                <p><a href="/maintenance/dependency/simple">Simple Dependency Graph</a> | <a href="/maintenance/dependency/dependency-tree-graph">Detailed Dependency Graph</a> | <a href="/maintenance/dependency/adjacency-matrix">Adjacency Matrix</a></p>
+                <p><a href="/maintenance/dependency/simple">Simple Dependency Graph</a> | <a href="/maintenance/dependency/adjacency-matrix">Adjacency Matrix</a></p>
                 <ul>
                     {% for bundle in bundles %}
                         <li>
